kotlin/kotlin-parser/src/test/semlang/validatorTests/fail/functionCall2.sem
function myStuff.myFunction(): List<Integer> {
  List.empty<Integer>(,)
}
